--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,3 +15,12 @@ profile = "black"
 [build-system]
 requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
+
+[project]
+name = "furniture-ai"
+version = "0.1.0"
+requires-python = ">=3.12"
+dependencies = [
+	"fastapi>=0.115.0",
+	"uvicorn[standard]>=0.30.0",
+]
