--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,33 @@ services:
     volumes:
       - miniodata:/data
 
+  api:
+    build:
+      context: .
+      dockerfile: api/Dockerfile
+    environment:
+      POSTGRES_HOST: postgres
+      POSTGRES_PORT: 5432
+      POSTGRES_DB: furniture_ai
+      POSTGRES_USER: app
+      POSTGRES_PASSWORD: app
+      REDIS_URL: redis://redis:6379/0
+      S3_ENDPOINT_URL: http://minio:9000
+      S3_REGION: us-east-1
+      S3_ACCESS_KEY: minio
+      S3_SECRET_KEY: minio123
+      S3_BUCKET: artifacts
+      S3_PRESIGNED_TTL_SECONDS: 900
+    depends_on:
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+      minio:
+        condition: service_started
+    ports:
+      - "8000:8000"
+
 volumes:
   pgdata:
   miniodata:
