--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,4 +23,11 @@ requires-python = ">=3.12"
 dependencies = [
 	"fastapi>=0.115.0",
 	"uvicorn[standard]>=0.30.0",
+	"sqlalchemy>=2.0.32",
+	"asyncpg>=0.29.0",
+	"alembic>=1.13.2",
+	"redis>=5.0.7",
+	"boto3>=1.34.150",
+	"botocore>=1.34.150",
+	"pydantic-settings>=2.4.0",
 ]
