--- a/api/alembic.ini
+++ b/api/alembic.ini
@@ -1,6 +1,6 @@
 [alembic]
 script_location = api/alembic
-sqlalchemy.url = postgresql+asyncpg://app:app@localhost:5432/furniture_ai
+sqlalchemy.url = postgresql+asyncpg://app:app@postgres:5432/furniture_ai
 
 [loggers]
 keys = root,sqlalchemy,alembic
