--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,4 +30,8 @@ dependencies = [
 	"boto3>=1.34.150",
 	"botocore>=1.34.150",
 	"pydantic-settings>=2.4.0",
+	"aiohttp>=3.10.0",
+	"numpy>=1.26.0",
+	"scipy>=1.13.0",
+	"pgvector>=0.4.1",
 ]
