--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "furniture-ai"
 version = "0.1.0"
-requires-python = ">=3.12"
+requires-python = ">=3.11"
 dependencies = [
 	"fastapi>=0.115.0",
 	"uvicorn[standard]>=0.30.0",
@@ -34,4 +34,8 @@ dependencies = [
 	"numpy>=1.26.0",
 	"scipy>=1.13.0",
 	"pgvector>=0.4.1",
+	"pandas>=2.2.0",
+	"openpyxl>=3.1.0",
+	"typer>=0.9.0",
+	"psycopg-binary>=3.1.0",
 ]
