--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,7 @@
+[metadata]
+name = furniture-ai
+version = 0.1.0
+
 [options]
 packages = find:
-package_dir = =
 
-[options.packages.find]
-include = api*
